--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>common</module>
         <module>service</module>
         <module>model</module>
+        <module>service_gateway</module>
     </modules>
 
     <parent>
@@ -22,13 +23,11 @@
     </parent>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
         <java.version>1.8</java.version>
         <cloud.version>Hoxton.SR9</cloud.version>
         <alibaba.version>2.2.6.RELEASE</alibaba.version>
         <mybatis-plus.version>3.4.1</mybatis-plus.version>
-        <mysql.version>8.0.27</mysql.version>
+        <mysql.version>8.0.26</mysql.version>
         <jwt.version>0.7.0</jwt.version>
         <fastjson.version>1.2.29</fastjson.version>
         <httpclient.version>4.5.1</httpclient.version>
